fixed styling and collapsed list

--- a/client/src/components/places/places.css
+++ b/client/src/components/places/places.css
@@ -2,3 +2,9 @@
     width: 100%;
     height: 100%;
 }
+
+.combobox-input {
+    width: 100%;
+    height: 45px;
+    border-radius: 4%
+}
